# erc1155-rs-example

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  state.rs
cli/src/account/: mod.rs
cli/src/approval/: mod.rs
cli/src/balances/: mod.rs
cli/src/transfer/: mod.rs
contract/: Cargo.toml
contract/src/: lib.rs  state.rs
