[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "erc1155-rs"
path = "src/main.rs"

[dependencies]
clap = "3.1.18"
sled = "0.34.7"
borsh = "0.9.3"
solana-sdk = "1.10.24"
contract = { path = "../contract" }